Downgraded to Java 8 to support inclusion in older projects. (#40)